# developer-hub

./: .gitignore  ARCHITECTURE.md  CODE_ANALYSIS_SUMMARY.md  CONTRIBUTING.md  EXAMPLES_CATALOG.md  LICENSE  Makefile  NOTICE  README.md  common.mk  common_app.mk  doc.md  metadata.json
.githooks/: commit-msg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml
bsps/TARGET_APP_KIT_PSE84_AI/: RELEASE.md
docs/: EXTENDING.md  Gemfile  _config.yml  api.md  contributing.md  examples.md  getting-started.md  index.md
docs/_layouts/: default.html  home.html  single.html
docs/compliance/: summary.md
examples/: ARCHITECTURE.md  README.md
examples/ai-service-template/: Dockerfile  README.md  requirements-dev.txt  requirements.txt
examples/analytics-api/: DEVELOPER_GUIDE.md  README.md
examples/analytics-api/rust/: ARCHITECTURE.md  Cargo.toml  README.md
examples/analytics-api/rust/examples/: basic.rs  dashboard.rs
examples/analytics-api/rust/src/: lib.rs
examples/applications/: README.md
examples/device-mtls/: Makefile  README-TH.md  README.md  config.h  data_schema.c  main.c
examples/integrations/mqtt-integration/mqtt-quic-c/: ARCHITECTURE.md  CMakeLists.txt  README-RPI.md  README.md  install_deps.sh  metadata.json
examples/integrations/mqtt-integration/wss-live-streaming/rust/: .env.example  ARCHITECTURE.md  Cargo.toml  README.md
examples/integrations/mqtt-integration/wss-live-streaming/rust/src/: main.rs
examples/python-cli/: app.py  (+6 more)
hmi_ep01_basic_label/: README.md  main_example.c  metadata.json  ui_ep01_basic_label.c  ui_ep01_basic_label.h
hmi_ep02_button_event/: README.md  counter_logic.c  counter_logic.h  main_example.c  metadata.json  ui_button_counter.c  ui_button_counter.h
hmi_ep03_text_input_keyboard/: README.md  main_example.c  metadata.json  text_input_logic.c  text_input_logic.h  ui_text_input_keyboard.c  ui_text_input_keyboard.h  ui_text_input_layout.h
hmi_ep04_menu_navigation/: README.md  main_example.c  metadata.json
hmi_ep05_wifi_list/: README.md  main_example.c  metadata.json
hmi_ep06_wifi_profile_nvm/: README.md  main_example.c  metadata.json
hmi_ep07_final_wifi_manager/: README.md  main_example.c  metadata.json
int_ep01_dps368_monitor/: README.md  main_example.c  metadata.json
int_ep02_bmi270_motion_visual/: README.md  main_example.c  metadata.json
int_ep03_sht40_indicator/: README.md  main_example.c  metadata.json
int_ep04_bmm350_compass/: README.md  main_example.c  metadata.json
int_ep05_bmi270_radar_view/: README.md  main_example.c  metadata.json
int_ep06_digital_mic_probe/: README.md  main_example.c  metadata.json
int_ep07_sensorhub_final/: README.md  main_example.c  metadata.json
prac_a02_wifi_connect/: README.md  main_example.c  metadata.json
prac_a06_sensor_fusion/: README.md  main_example.c  metadata.json
prac_a10_flappy_bird/: README.md  main_example.c  metadata.json
prac_a12_snake_game/: README.md  main_example.c  metadata.json
prac_a13_pong_game/: README.md  main_example.c  metadata.json
prac_a14_game_shooter/: README.md  main_example.c  metadata.json
prac_a15_game_framework/: README.md  main_example.c  metadata.json
prac_a19_smart_watch/: README.md  main_example.c  metadata.json  watch_clock.c  watch_screens.h  watch_sensors.c  watch_steps.c  watch_weather.c
prac_a20_production_dashboard/: README.md  main_example.c  metadata.json
prac_b18_thai_text/: README.md  main_example.c  metadata.json
prac_i02_line_chart_accel/: README.md  main_example.c  metadata.json
prac_i03_bar_chart_multi/: README.md  main_example.c  metadata.json
prac_i06_environ_monitor/: README.md  main_example.c  metadata.json
prac_i07_motion_detector/: README.md  main_example.c  metadata.json
prac_i08_level_bubble/: README.md  main_example.c  metadata.json
prac_i09_data_logger/: README.md  main_example.c  metadata.json
prac_i10_gauge_cluster/: README.md  main_example.c  metadata.json
prac_i11_status_panel/: README.md  main_example.c  metadata.json
prac_i15_tile_navigation/: README.md  main_example.c  metadata.json
prac_i18_chart_statistics/: README.md  main_example.c  metadata.json
prac_i19_color_mixer/: README.md  main_example.c  metadata.json
prac_i23_automation_rules/: README.md  main_example.c  metadata.json
prac_i28_multi_page_app/: README.md  main_example.c  metadata.json
prac_i33_lcd_console/: README.md  main_example.c  metadata.json
proj_cm33_ns/: Makefile  main.c  project_info.json
proj_cm33_s/: Makefile  main.c  project_info.json
proj_cm55/: Makefile  main.c  project_info.json
(+653 files in other folders)
